[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Test_area.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )

[node name="Test_area" type="Node2D"]
script = ExtResource( 1 )

[node name="ADD" type="Button" parent="."]
margin_left = 45.0
margin_top = 426.0
margin_right = 161.0
margin_bottom = 525.0
text = "ADD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="REMOVE" type="Button" parent="."]
margin_left = 233.0
margin_top = 399.0
margin_right = 353.0
margin_bottom = 498.0
text = "REMOVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SHOW" type="Button" parent="."]
margin_left = 188.0
margin_top = 556.0
margin_right = 308.0
margin_bottom = 655.0
text = "SHOW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AD" type="HSlider" parent="."]
margin_left = 22.0
margin_top = 373.0
margin_right = 197.0
margin_bottom = 400.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RE" type="HSlider" parent="."]
margin_left = 211.0
margin_top = 343.0
margin_right = 386.0
margin_bottom = 370.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 66.0
margin_top = 52.0
margin_right = 358.0
margin_bottom = 308.0
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="ADD" to="." method="_on_ADD_button_up"]
[connection signal="button_up" from="REMOVE" to="." method="_on_REMOVE_button_up"]
[connection signal="button_up" from="SHOW" to="." method="_on_SHOW_button_up"]
